Correctly set dark mode for guests including login views (#619)

--- a/resources/assets/sass/_variables-dark.scss
+++ b/resources/assets/sass/_variables-dark.scss
@@ -151,6 +151,11 @@ $card-cap-bg: $darkmode-bg;
 $card-bg: $darkmode-bg;
 
 
+// Inputs
+$input-group-addon-bg: $input-bg !default;
+$input-group-addon-border-color: $input-border-color !default;
+
+
 // List group
 $list-group-bg: $darkmode-bg;
 $list-group-color: $body-color;
@@ -166,6 +171,7 @@ $list-group-disabled-color: $gray-700;
 $list-group-action-color: $white;
 $list-group-action-active-color: $white;
 $list-group-action-active-bg: $darkmode-bg-dark;
+
 
 // Alerts
 $alert-bg-level: +8;
